<resources>
    <string name="app_name">Pico Botella</string>
    <string name="counter_text">3</string>
    <string name="press_me">Presióname</string>
    <string name="bottle_image">Botella del juego</string>
    <string name="spin_button">Botón girar botella</string>
    <string name="app_title">Pico Botella</string>
    <string name="star_button">Calificar app</string>
    <string name="audio_button">Control audio</string>
    <string name="info_button">Información</string>
    <string name="retos_button">Retos</string>
    <string name="share_button">Compartir app</string>
    <string name="share_app_url">https://play.google.com/store/apps/details?id=com.nequi.MobileApp&amp;hl=es_419&amp;gl=es</string>
    <string name="share_app_message">App Pico Botella.\nSolo los valientes lo juegan !!\n%1$s</string>
    <string name="share_app_chooser_title">Compartir aplicación</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.nequi.MobileApp&amp;hl=es_419&amp;gl=es</string>
    <string name="play_store_package">com.android.vending</string>
    <string name="nequi_package">com.nequi.MobileApp</string>
    <string name="rules_title">Reglas del Juego</string>
    <string name="back_button">Volver</string>
    <string name="how_to_play_title">¿Cómo se juega?</string>
    <string name="how_to_play_desc">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.</string>
    <string name="who_wins_title">¿Quién gana?</string>
    <string name="who_wins_desc">Gana el último jugador que no abandone el juego.</string>
    <string name="victory_image">Animación de triunfo</string>
    <string name="retos_title">Retos</string>
    <string name="add_reto_button">Agregar reto</string>
    <string name="edit_reto_button">Editar reto</string>
    <string name="delete_reto_button">Eliminar reto</string>
    <string name="add_reto_title">Agregar reto</string>
    <string name="edit_reto_title">Editar reto</string>
    <string name="reto_hint">Describe el reto…</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="reto_input_hint">Escriba el reto</string>
    <string name="btn_save">Guardar</string>
    <string name="retos_empty">No hay retos aún.\n¡Toca el + para agregar el primero!</string>
    <string name="dialog_delete_title">¿Desea eliminar el siguiente reto?</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_si">SÍ</string>
    <string name="dialog_reto_title">¡Reto!</string>
    <string name="dialog_reto_close">Cerrar</string>

    <string name="sample_reto_1">Baila durante 30 segundos</string>
    <string name="sample_reto_2">Imita a un animal</string>
    <string name="sample_reto_3">Canta el coro de tu canción favorita</string>
    <string name="sample_reto_4">Di un chiste en voz alta</string>
    <string name="sample_reto_5">Haz 10 sentadillas</string>
</resources>
