<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipChildren="false"
    android:background="@drawable/wood_background">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/toolbar_custom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/bottleContainer"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/customToolbar"
        app:layout_constraintBottom_toTopOf="@id/spinContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgBottle"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:contentDescription="@string/bottle_image"
            android:scaleType="fitCenter"
            android:src="@drawable/bottle"/>

        <proyecto.picobotella.view.OutlinedTextView
            android:id="@+id/txtCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/counter_text"
            android:textColor="#FFA500"
            android:textSize="65sp"
            android:textStyle="bold"
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/spinContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp">

        <FrameLayout
            android:id="@+id/btnSpinContainer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/btnSpin"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/button_glow"
                android:contentDescription="@string/spin_button"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_me"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>